Changes in Section Implementation.tex

--- a/rv2015/command.tex
+++ b/rv2015/command.tex
@@ -13,7 +13,7 @@
 \newcommand{\curPoint}{\ensuremath{\mathit{curPtr}}\xspace}
 
 \newcommand{\cP}{\ensuremath{\mathcal{P}}\xspace}
-
+\newcommand{\ha}{\ensuremath{\mathsf{HMon}}\xspace}
 
 \newcommand{\etal}{\textit{et al.}\xspace}
 \newcommand{\ie}{\textit{i.e.}\xspace}
