small change in the introduction.

--- a/rv2015/sections/Background.tex
+++ b/rv2015/sections/Background.tex
@@ -104,8 +104,10 @@ They perform eager runtime monitoring by formula rewriting which resolves past-t
 into equivalent formulas without unguarded past-time operators and derive new future-time
 formulas which separate the current state from future state.
 While they have a tight encoding of their canonical formulas, they still require more memory
-than some existing algorithms (because formulas
-grow in size as they are rewritten), including the current work.
+than some existing algorithms (formulas
+grow in size as they are rewritten), including
+\monitor.
+% the current work.
 %Their evaluation algorithm is similar to ours, but they require more storage space to handle formula rewriting with potentially growing formulas.
 
 
