--- a/rv2015/rv2015_main.tex
+++ b/rv2015/rv2015_main.tex
@@ -114,7 +114,7 @@ In this paper, we develop an online runtime monitoring approach that targets an 
 vehicle (ARV) system and recount our experience with it. To avoid instrumentation we passively monitor the target system by
 generating atomic property constructs (propositions) from the observed network state.
 We then develop an efficient runtime monitoring algorithm, \monitor, that \emph{eagerly} checks for violations of desired properties
-written in a future-bounded, propositional metric temporal logic.
+written in  future-bounded, propositional metric temporal logic.
 We show the efficacy of \monitor by implementing it and empirically evaluating it against logs obtained from
 the testing of an ARV system. \monitor was able to detect violations of several safety requirements.
 
