--- a/rv2015/sections/Background.tex
+++ b/rv2015/sections/Background.tex
@@ -129,12 +129,12 @@ regular expressions which cannot capture timing properties.
 Basin et. al. compare runtime monitoring algorithms for MTL properties \cite{Basin2012}.
 \monitor works similarly to their point-based monitoring algorithm but \monitor checks
 future temporal operators more aggresively.
-Donz\'e \etal \cite{DFM13} developed a robustness monitor for Signal Temporal Logic (STL) which
+Donz\'e \etal \cite{DFM13} developed a robustness monitor for Signal Temporal Logic  which
 supports continuous signals.
 Nickovic and Maler \cite{NM07} developed the  AWT tool which monitors analog systems.
 We only consider discrete events. Dokhanchi \etal \cite{DHF14}
 developed an online runtime monitoring algorithm for checking the robustness of formulas written in a
-future-bounded MTL fragment. We use the same MTL fragment but we consider satisfaction of the formula
+future-bounded MTL fragment. We consider satisfaction of the formula
 instead of robustness.
 % Though they discuss the use of
 % delay queues to monitor future-time properties (and thus do not eagerly check future-time formulas), we could integrate their algorithm into our eager monitoring framework.
